--- a/app/nrf91/hello_world_lp/prj.conf
+++ b/app/nrf91/hello_world_lp/prj.conf
@@ -1,1 +1,26 @@
-# nothing here
+
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+###### General config
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+CONFIG_NCS_SAMPLES_DEFAULTS=y
+
+
+###### Network
+CONFIG_NETWORKING=y
+CONFIG_NET_NATIVE=n
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=y
+
+####### LTE link control
+CONFIG_LTE_LINK_CONTROL=y
+CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
+
+###### BSD library
+CONFIG_BSD_LIBRARY=y
+
+###### Heap and stacks
+CONFIG_HEAP_MEM_POOL_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
