add SPI_CS in SPI driver example

--- a/app/ble/bluetooth_central_bas_peripheral_hr_10/prj.conf
+++ b/app/ble/bluetooth_central_bas_peripheral_hr_10/prj.conf
@@ -29,6 +29,7 @@ CONFIG_BT_DEVICE_APPEARANCE=833
 
 CONFIG_BT_MAX_CONN=10
 
+# add more slave support numbers in ble controller. 
 CONFIG_SDC_SLAVE_COUNT=2
 
 CONFIG_BT_SETTINGS=y
