--- a/app/ble/test_coded_phy_beacon/prj.conf
+++ b/app/ble/test_coded_phy_beacon/prj.conf
@@ -7,3 +7,13 @@ CONFIG_BT_CTLR_PHY_CODED=y
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_LL_SOFTDEVICE_DEFAULT=y
 CONFIG_BT_USER_PHY_UPDATE=y
+
+## switch debugging to RTT, disable UART; check low power
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
+
+CONFIG_BT_CTLR_TX_PWR_0=y
+#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+#CONFIG_BT_CTLR_TX_PWR_MINUS_8=y
