--- a/app/ble/test_coded_phy_scan/prj.conf
+++ b/app/ble/test_coded_phy_scan/prj.conf
@@ -17,7 +17,7 @@ CONFIG_BT_SCAN_NAME_CNT=1
 
 #adding these options to disable extra data output to UART. 
 
-CONFIG_BOOT_BANNER=n
-CONFIG_BT_DEBUG_NONE=y 
-CONFIG_BT_DEBUG_LOG=n
+#CONFIG_BOOT_BANNER=n
+#CONFIG_BT_DEBUG_NONE=y 
+#CONFIG_BT_DEBUG_LOG=n
 ##################end here#############################
