--- a/app/ble/test_coded_phy_beacon/prj.conf
+++ b/app/ble/test_coded_phy_beacon/prj.conf
@@ -9,11 +9,15 @@ CONFIG_BT_LL_SOFTDEVICE_DEFAULT=y
 CONFIG_BT_USER_PHY_UPDATE=y
 
 ## switch debugging to RTT, disable UART; check low power
-CONFIG_SERIAL=n
-CONFIG_UART_CONSOLE=n
-CONFIG_RTT_CONSOLE=y
-CONFIG_USE_SEGGER_RTT=y
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_RTT_CONSOLE=n
+CONFIG_USE_SEGGER_RTT=n
 
-CONFIG_BT_CTLR_TX_PWR_0=y
+#CONFIG_BT_CTLR_TX_PWR_0=y
+
+CONFIG_BT_CTLR_ADVANCED_FEATURES=y
+CONFIG_BT_CTLR_CONN_RSSI=y
+CONFIG_BT_CTLR_TX_PWR_DYNAMIC_CONTROL=y
 #CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 #CONFIG_BT_CTLR_TX_PWR_MINUS_8=y
