--- a/app/nrf91/mqtt_non_secure/prj.conf
+++ b/app/nrf91/mqtt_non_secure/prj.conf
@@ -37,3 +37,16 @@ CONFIG_MQTT_BROKER_PORT=1883
 # Memory
 CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_HEAP_MEM_POOL_SIZE=2048
+
+
+###### Enable logging output for debugging. 
+###### make sure enable SERIAL for output 
+CONFIG_SERIAL=y
+###### for AT commands.  comment out to default info
+CONFIG_AT_CMD_LOG_LEVEL_DBG=y
+
+###### link control comment out to default info
+CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+
+###### for urc notification; comment out to default info
+CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
