Fix warning when compile the udp_lp_onoff.

--- a/app/nrf91/udp_lp_test/prj.conf
+++ b/app/nrf91/udp_lp_test/prj.conf
@@ -6,8 +6,8 @@
 
 ###### UDP settings
 
-CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=50
-CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=60
+CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=20
+CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=30
 CONFIG_UDP_SERVER_ADDRESS_STATIC="8.8.8.8"
 CONFIG_UDP_SERVER_PORT=2469
 
@@ -71,14 +71,28 @@ CONFIG_LTE_LOCK_BAND_MASK="1000000000000000000000000000"
 
 
 
-###### Enable logging output for debugging. 
+####### Enable logging output for debugging. 
+####### make sure enable SERIAL for output 
+#CONFIG_SERIAL=y
+####### for AT commands.  comment out to default info
+#CONFIG_AT_CMD_LOG_LEVEL_DBG=y
+#
+####### link control comment out to default info
+#CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+#
+####### for urc notification; comment out to default info
+#CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
+
+
+
+###### Disable logging output for debugging. 
 ###### make sure enable SERIAL for output 
-CONFIG_SERIAL=y
+CONFIG_SERIAL=n
 ###### for AT commands.  comment out to default info
-CONFIG_AT_CMD_LOG_LEVEL_DBG=y
+CONFIG_AT_CMD_LOG_LEVEL_DBG=n
 
 ###### link control comment out to default info
-CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=n
 
 ###### for urc notification; comment out to default info
-CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
+CONFIG_AT_NOTIF_LOG_LEVEL_DBG=n
