--- a/app/nrf91/udp_lp_onoff/prj.conf
+++ b/app/nrf91/udp_lp_onoff/prj.conf
@@ -6,10 +6,17 @@
 
 ###### UDP settings
 
-CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=20
+CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=950
 CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=30
-CONFIG_UDP_SERVER_ADDRESS_STATIC="8.8.8.8"
-CONFIG_UDP_SERVER_PORT=2469
+CONFIG_UDP_SERVER_ADDRESS_STATIC="202.169.100.197"
+
+#if TCP, port configurations need to be changed. 
+#CONFIG_TEST_USE_TCP=y  
+CONFIG_UDP_SERVER_PORT=65003
+#CONFIG_UDP_SERVER_PORT=65004
+
+#CONFIG_NET_TCP=y
+CONFIG_NET_UDP=y
 
 ###### General config
 CONFIG_NEWLIB_LIBC=y
@@ -31,9 +38,9 @@ CONFIG_LTE_AUTO_INIT_AND_CONNECT=n
 CONFIG_BSD_LIBRARY=y
 
 ###### Heap and stacks
-CONFIG_HEAP_MEM_POOL_SIZE=1024
+CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 ###### LTE RAT, (GPS etc. only 1 at a time)
 ###### Network Mode / LTE category
@@ -42,24 +49,24 @@ CONFIG_LTE_NETWORK_MODE_LTE_M=y
 #CONFIG_LTE_NETWORK_MODE_NBIOT=y
 #CONFIG_LTE_NETWORK_MODE_NBIOT_GPS=y
 
-###### PSM
-CONFIG_UDP_PSM_ENABLE=y
-CONFIG_LTE_PSM_REQ_RPTAU="00111000"
-######default Telstra TAU: 00111000 -> 24 hours, if the number too small, could get rejected which means the timer not activated (PSM for ever ^_^)
-CONFIG_LTE_PSM_REQ_RAT="00000000"
-
-###### eDRX CONFIG_LTE_EDRX_REQ
-CONFIG_UDP_EDRX_ENABLE=n
-CONFIG_LTE_EDRX_REQ=n
-CONFIG_LTE_EDRX_REQ_VALUE="1001"
-CONFIG_LTE_EDRX_REQ_VALUE="1001"
-######1001 ; 163.84 seconds.
-
-###### RAI (release assistant indication)
-CONFIG_UDP_RAI_ENABLE=y
-CONFIG_LTE_RAI_REQ_VALUE="4"
-
-######BAND Lock, comment out if not needed. 
+####### PSM
+#CONFIG_UDP_PSM_ENABLE=y
+#CONFIG_LTE_PSM_REQ_RPTAU="00111000"
+#######default Telstra TAU: 00111000 -> 24 hours, if the number too small, could get rejected which means the timer not activated (PSM for ever ^_^)
+#CONFIG_LTE_PSM_REQ_RAT="00000000"
+#
+####### eDRX CONFIG_LTE_EDRX_REQ
+#CONFIG_UDP_EDRX_ENABLE=n
+#CONFIG_LTE_EDRX_REQ=n
+#CONFIG_LTE_EDRX_REQ_VALUE="1001"
+#CONFIG_LTE_EDRX_REQ_VALUE="1001"
+#######1001 ; 163.84 seconds.
+#
+####### RAI (release assistant indication)
+#CONFIG_UDP_RAI_ENABLE=y
+#CONFIG_LTE_RAI_REQ_VALUE="4"
+#
+#######BAND Lock, comment out if not needed. 
 
 CONFIG_LTE_LOCK_BANDS=y
 ###### Bands 3, 8, 28 ;#enable B3, 8, 28, good for ANZ.
@@ -70,40 +77,42 @@ CONFIG_LTE_LOCK_BANDS=y
 CONFIG_LTE_LOCK_BAND_MASK="1000000000000000000000000000"
 
 CONFIG_UDP_ON_OFF_ENABLE=y
-
+CONFIG_USE_CFUN_0_OFF=n
+CONFIG_RECEIVE_UDP_PACKETS=y
+CONFIG_UDP_RECV_TIMEOUT_SECONDS=4
 
 ###### Enable logging output for debugging. 
 ###### make sure enable SERIAL for output 
 CONFIG_SERIAL=n
 ###### for AT commands.  comment out to default info
-CONFIG_AT_CMD_LOG_LEVEL_DBG=y
-
-###### link control comment out to default info
-CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
-
-###### for urc notification; comment out to default info
-CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
+#CONFIG_AT_CMD_LOG_LEVEL_DBG=y
+#
+####### link control comment out to default info
+#CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=y
+#
+####### for urc notification; comment out to default info
+#CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
 
 
 #####RTT for debugging
 
-CONFIG_LOG_PRINTK=y
-# Segger RTT
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
-CONFIG_LOG_BACKEND_RTT=y
-CONFIG_LOG_BACKEND_UART=n
+#CONFIG_LOG_PRINTK=y
+## Segger RTT
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
+#CONFIG_LOG_BACKEND_RTT=y
+#CONFIG_LOG_BACKEND_UART=n
 
 
-####### Disable logging output for debugging. 
-####### make sure enable SERIAL for output 
-#CONFIG_SERIAL=n
-####### for AT commands.  comment out to default info
-#CONFIG_AT_CMD_LOG_LEVEL_DBG=n
-#
-####### link control comment out to default info
-#CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=n
-#
-####### for urc notification; comment out to default info
-#CONFIG_AT_NOTIF_LOG_LEVEL_DBG=n
+###### Disable logging output for debugging. 
+###### make sure enable SERIAL for output 
+CONFIG_SERIAL=n
+###### for AT commands.  comment out to default info
+CONFIG_AT_CMD_LOG_LEVEL_DBG=n
+
+###### link control comment out to default info
+CONFIG_LTE_LINK_CONTROL_LOG_LEVEL_DBG=n
+
+###### for urc notification; comment out to default info
+CONFIG_AT_NOTIF_LOG_LEVEL_DBG=n
