--- a/app/nrf91/udp_lp_test/prj.conf
+++ b/app/nrf91/udp_lp_test/prj.conf
@@ -8,8 +8,10 @@
 
 CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=20
 CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=30
-CONFIG_UDP_SERVER_ADDRESS_STATIC="8.8.8.8"
-CONFIG_UDP_SERVER_PORT=2469
+#CONFIG_UDP_SERVER_ADDRESS_STATIC="8.8.8.8"
+#CONFIG_UDP_SERVER_PORT=2469
+CONFIG_UDP_SERVER_ADDRESS_STATIC="202.169.100.197"
+CONFIG_UDP_SERVER_PORT=65003
 
 ###### General config
 CONFIG_NEWLIB_LIBC=y
@@ -37,9 +39,9 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 ###### LTE RAT, (GPS etc. only 1 at a time)
 ###### Network Mode / LTE category
-CONFIG_LTE_NETWORK_MODE_LTE_M=y
+#CONFIG_LTE_NETWORK_MODE_LTE_M=y
 #CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
-#CONFIG_LTE_NETWORK_MODE_NBIOT=y
+CONFIG_LTE_NETWORK_MODE_NBIOT=y
 #CONFIG_LTE_NETWORK_MODE_NBIOT_GPS=y
 
 ###### PSM
