--- a/app/nrf91/udp_lp_onoff/prj.conf
+++ b/app/nrf91/udp_lp_onoff/prj.conf
@@ -11,11 +11,11 @@ CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=30
 CONFIG_UDP_SERVER_ADDRESS_STATIC="202.169.100.197"
 
 #if TCP, port configurations need to be changed. 
-#CONFIG_TEST_USE_TCP=y  
-CONFIG_UDP_SERVER_PORT=65003
-#CONFIG_UDP_SERVER_PORT=65004
+CONFIG_TEST_USE_TCP=y  
+#CONFIG_UDP_SERVER_PORT=65003
+CONFIG_UDP_SERVER_PORT=65004
 
-#CONFIG_NET_TCP=y
+CONFIG_NET_TCP=y
 CONFIG_NET_UDP=y
 
 ###### General config
@@ -44,9 +44,9 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 ###### LTE RAT, (GPS etc. only 1 at a time)
 ###### Network Mode / LTE category
-CONFIG_LTE_NETWORK_MODE_LTE_M=y
+#CONFIG_LTE_NETWORK_MODE_LTE_M=y
 #CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
-#CONFIG_LTE_NETWORK_MODE_NBIOT=y
+CONFIG_LTE_NETWORK_MODE_NBIOT=y
 #CONFIG_LTE_NETWORK_MODE_NBIOT_GPS=y
 
 ####### PSM
