--- a/app/nrf91/udp_lp_onoff/prj.conf
+++ b/app/nrf91/udp_lp_onoff/prj.conf
@@ -6,7 +6,7 @@
 
 ###### UDP settings
 
-CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=950
+CONFIG_UDP_DATA_UPLOAD_SIZE_BYTES=1000
 CONFIG_UDP_DATA_UPLOAD_FREQUENCY_SECONDS=30
 CONFIG_UDP_SERVER_ADDRESS_STATIC="202.169.100.197"
 
@@ -44,9 +44,9 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 ###### LTE RAT, (GPS etc. only 1 at a time)
 ###### Network Mode / LTE category
-#CONFIG_LTE_NETWORK_MODE_LTE_M=y
+CONFIG_LTE_NETWORK_MODE_LTE_M=y
 #CONFIG_LTE_NETWORK_MODE_LTE_M_GPS=y
-CONFIG_LTE_NETWORK_MODE_NBIOT=y
+#CONFIG_LTE_NETWORK_MODE_NBIOT=y
 #CONFIG_LTE_NETWORK_MODE_NBIOT_GPS=y
 
 ####### PSM
@@ -96,13 +96,13 @@ CONFIG_SERIAL=n
 
 #####RTT for debugging
 
-#CONFIG_LOG_PRINTK=y
-## Segger RTT
-#CONFIG_USE_SEGGER_RTT=y
-#CONFIG_RTT_CONSOLE=y
-#CONFIG_UART_CONSOLE=n
-#CONFIG_LOG_BACKEND_RTT=y
-#CONFIG_LOG_BACKEND_UART=n
+CONFIG_LOG_PRINTK=y
+# Segger RTT
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
 
 
 ###### Disable logging output for debugging. 
