--- a/app/helloBoard/hello_world/CMakeLists.txt
+++ b/app/helloBoard/hello_world/CMakeLists.txt
@@ -3,6 +3,8 @@
 cmake_minimum_required(VERSION 3.13.1)
 
 list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+list (APPEND DTS_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+list (APPEND SOC_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(hello_world)
