add hci pwr control, all ok with master branch. some feature now work with v1.5.1

--- a/app/ble/hci_pwr_ctrl/prj.conf
+++ b/app/ble/hci_pwr_ctrl/prj.conf
@@ -1,11 +1,27 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_MAIN_STACK_SIZE=512
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=768
 CONFIG_BT_HRS=y
 CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_DEVICE_NAME="Dynamic test beacon"
 CONFIG_BT_CTLR_ADVANCED_FEATURES=y
 CONFIG_BT_CTLR_CONN_RSSI=y
 CONFIG_BT_CTLR_TX_PWR_DYNAMIC_CONTROL=y
+
+# Config logger
+CONFIG_LOG=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+
+#optional, not needed for the power control example
+CONFIG_BT_CTLR_PHY_CODED=y
+CONFIG_BT_EXT_ADV=y
+CONFIG_BT_LL_SOFTDEVICE_DEFAULT=y
+CONFIG_BT_USER_PHY_UPDATE=y
+CONFIG_BT_HCI_VS_EXT=y
+CONFIG_BT_HCI_VS=y
+
+#note; some feature doens't work with v1.5.1. checked master branch is ok.
