--- a/nrf53_ble/otherExamples/appcore/prj.conf
+++ b/nrf53_ble/otherExamples/appcore/prj.conf
@@ -66,6 +66,8 @@ CONFIG_NRF_RPC=y
 
 # RPC api mode
 CONFIG_RPC_REMOTE_API=y
+CONFIG_RPC_NUS_DEDICATE=n
+
 CONFIG_TINYCBOR=y
 CONFIG_RPMSG_MASTER=y
 CONFIG_THREAD_CUSTOM_DATA=y
