--- a/nrf53_ble/otherExamples/ble_netcore/Kconfig
+++ b/nrf53_ble/otherExamples/ble_netcore/Kconfig
@@ -41,10 +41,17 @@ config RPC_REMOTE_API
 	bool "(test purpose) app core and net core communicate by API. that is, app core call net core API, and net core can also call app core API"
 	help
 	  enable the RPC api mode
+	  
 config RPC_SIMULATE_UART
 	bool "(test purpose) app core and net core communicate by tx and rx data directly, just like uart"
 	help
 	  enable the RPC uart mode
+	  
+config RPC_NUS_DEDICATE
+	bool "load dedicated NUS RPC API"
+	help
+		if yes, load dedicated NUS RPC API
+		
 config EXAMPLE_DFU_OTA
 	bool "(test purpose) load DFU example over BLE SMP"
 	help
