--- a/nrf53_ble/otherExamples/ble_netcore/prj.conf
+++ b/nrf53_ble/otherExamples/ble_netcore/prj.conf
@@ -11,11 +11,11 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="nus_netcore"
 CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_MAX_CONN=1
-CONFIG_BT_LL_SW_SPLIT=y
+CONFIG_BT_ID_MAX=1
 
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_CENTRAL=y
-CONFIG_BT_MAX_CONN=2
+#CONFIG_BT_CENTRAL=y
+CONFIG_BT_MAX_CONN=1
 
 # Enable the NUS service
 CONFIG_BT_NUS=y
@@ -50,6 +50,7 @@ CONFIG_NRF_RPC=y
 
 ##RPC api mode
 CONFIG_RPC_REMOTE_API=y
+CONFIG_RPC_NUS_DEDICATE=n
 
 CONFIG_TINYCBOR=y
 CONFIG_RPMSG_MASTER=n
@@ -64,6 +65,7 @@ CONFIG_NRF_RPC_OS_LOG_LEVEL_INF=y
 CONFIG_RPC_SIMULATE_UART=n
 #CONFIG_TINYCBOR=n
 #CONFIG_NRF_RPC_CBOR=n
+CONFIG_NRF_RPC=y
 
 ## Load BLE OTA DFU example in network core side ##
 CONFIG_EXAMPLE_DFU_OTA=y
@@ -89,3 +91,6 @@ CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
 # we changed smp_bt.c. thus, don't use the following options
 #CONFIG_MCUMGR_SMP_BT=n
 #CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+
+#CONFIG_BT_LL_SW_SPLIT=y
+CONFIG_SOC_FLASH_NRF_LL_SOFTDEVICE=n
