lp counter added (not full example)

--- a/app/nrf91/udp_lp_test/prj.conf
+++ b/app/nrf91/udp_lp_test/prj.conf
@@ -53,8 +53,8 @@ CONFIG_LTE_PSM_REQ_RAT="00000000"
 ###### eDRX CONFIG_LTE_EDRX_REQ
 CONFIG_UDP_EDRX_ENABLE=n
 CONFIG_LTE_EDRX_REQ=n
-CONFIG_LTE_EDRX_REQ_VALUE="1001"
-CONFIG_LTE_EDRX_REQ_VALUE="1001"
+#CONFIG_LTE_EDRX_REQ_VALUE="1001"
+#CONFIG_LTE_EDRX_REQ_VALUE="1001"
 ######1001 ; 163.84 seconds.
 
 ###### RAI (release assistant indication)
