add more in debug dump test cases.

--- a/driver/SPI_nRF91_ncs_v1.2.1/prj.conf
+++ b/driver/SPI_nRF91_ncs_v1.2.1/prj.conf
@@ -12,15 +12,15 @@ CONFIG_SPI=y
 #CONFIG_SPI_ASYNC=n
 
 CONFIG_LOG=y
-CONFIG_SPI_LOG_LEVEL_DBG=y
+#CONFIG_SPI_LOG_LEVEL_DBG=y
 
 
 # Segger RTT
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
-CONFIG_LOG_BACKEND_RTT=n
-CONFIG_LOG_BACKEND_UART=n
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
+#CONFIG_LOG_BACKEND_RTT=n
+#CONFIG_LOG_BACKEND_UART=n
 
 CONFIG_DEBUG=y
 CONFIG_THREAD_MONITOR=y
