add low power udp example under vscode

--- a/vscode/threads_debug/prj.conf
+++ b/vscode/threads_debug/prj.conf
@@ -6,4 +6,4 @@ CONFIG_GPIO=y
 #optimize for debugging
 CONFIG_DEBUG_OPTIMIZATIONS=y
 #Allow debugger gets threads info
-CONFIG_DEBUG_THREAD_INFO=y
+#CONFIG_DEBUG_THREAD_INFO=y
