ange lp_udp_cfun_1_4 dbg conf, add spi_flash to support nRF52840dk_nrf52811.

--- a/vscode/lp_udp_cfun_1_4/nb_b28_dbg_trace.conf
+++ b/vscode/lp_udp_cfun_1_4/nb_b28_dbg_trace.conf
@@ -49,3 +49,11 @@ CONFIG_AT_NOTIF_LOG_LEVEL_DBG=y
 # enable Modem trace files. 
 
 CONFIG_NRF_MODEM_LIB_TRACE_ENABLED=y
+
+#optimize for debugging
+CONFIG_DEBUG_OPTIMIZATIONS=y
+#Allow debugger gets threads info
+CONFIG_DEBUG_THREAD_INFO=y
+
+CONFIG_THREAD_ANALYZER=y
+CONFIG_THREAD_NAME=y
