--- a/app/util_test/debug_dump_uart/prj.conf
+++ b/app/util_test/debug_dump_uart/prj.conf
@@ -14,3 +14,9 @@ CONFIG_THREAD_NAME=y
 CONFIG_DEBUG_COREDUMP=y
 
 CONFIG_EXCEPTION_STACK_TRACE=y
+
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
