--- a/driver/SPI_nRF91_ncs_v1.2.1/prj.conf
+++ b/driver/SPI_nRF91_ncs_v1.2.1/prj.conf
@@ -26,3 +26,9 @@ CONFIG_DEBUG=y
 CONFIG_THREAD_MONITOR=y
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_STACK_INFO=y
+
+CONFIG_SPI_1=y
+CONFIG_NRFX_SPIM1=y
+
+CONFIG_SPI_3=n
+CONFIG_NRFX_SPIM3=n
